- New tests within `Container$isValid()` method to detect broken container references in symbols and inconsistent symbol naming between the `<Container>$data` field and the symbol objects
- Breaking: Symbol records and symbol names are treated in a case insensitive manner. Symbols
 domain is not automaitcally checked
- isValid method does not check for symbol record domain columns being factors, for duplicates, and for domain violations
- New Symbol methods `hasDomainViolations`, `countDomainViolations`, `findDomainViolations`, `dropDomainViolations`
- New Container methods `hasDomainViolations`, `countDomainViolations`, `dropDomainViolations`
- bug fix in Alias record setter
- bug fix in `toDense()` method for Symbols with domaintype other than `regular`
- allowed symbol overwriting with `addSet/addParameter/addVariable/addEquation/addAlias` methods when everything other than records and description is unchanged
- Added methods `SpecialValues$isNA`, `SpecialValues$isEps`, `SpecialValues$isUndef`, `SpecialValues$isPosInf`, `SpcialValues$isNegInf` to test for SpecialValues
- bug fix in count* methods for multiple columns
- The argument for where* methods changed from `columns` to `column`

GAMS Transfer R v1.0.0
==================
- added a new class ConstContainer for efficient data transfer
- allow read from Container/ConstContainer into another Container
- bug fix in listSets function that used to also list Aliases
- updated default_values in the Equation class
- updated Symbol isValid() method to check for levels of the linked domain set and symbol records
- bug fix in setting factor levels for subsets of subsets
- bug fix in countEPS method
- fixed record setter using non-dataframe object types for variables, equations, and parameters

GAMS Transfer R v0.2.0
==================
- released binary packages on Windows and MacOS
- bug fixes and improvements

GAMS Transfer R v0.1.0
==================
- first release